<resources>
    <string name="app_name">PartyDraw</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="placeholder_edit_name_hompage">ກະລຸນາປ້ອນຊື່ຜູ່ຫຼີ້ນບ່ອນນີ້</string>
    <string name="button_add_home">ເພີ່ມຊື່</string>
    <string name="select_game_home">ເລືອກເກມ</string>
    <string name="countdown_boom_game">ກໍາລັງນັບຖອຍຫຼັງຢູ່ທີ່...</string>
    <string name="custom_setting_row_col_boom_game">ກໍານົດຖັນ ແລະ ແຖວ</string>
    <string name="placeholder_editrow_boom_game">ກະລຸນາປ້ອນຈໍານວນແຖວ</string>
    <string name="placeholder_editcol_boom_game">ກະລຸນາປ້ອນຈໍານວນຖັນ</string>
    <string name="button_random_exchangepresents_game">ກົດທີ່ນີ້ເພື່ອສູ່ມຫາຜູ່ເລີ່ມຫຼີ້ນ</string>
    <string name="textview_show_name_exchangepresents_game">ກົດປຸ່ມດ້ານລຸ່ມເພື່ອເລີ່ມ</string>
    <string name="setting_boom_game">ຕັ້ງຄ່າ ຈໍານວນປຸ່ມ</string>
    <string name="radio_option_3col_3row">9 ໃບ (3x3)</string>
    <string name="radio_option_3col_9row">50 ໃບ (5x10)</string>
    <string name="radio_option_3col_6col">20 ໃບ (4x5)</string>
    <string name="customize">ກໍານົດເອງ</string>
    <string name="setting_homepage">Settings</string>
    <string name="textview_header_animation_startfirst_exchangepresent_game">ກໍາລັງສູ່ມຫາຜູ່ທີ່ຈະເລີ່ມ...</string>
    <string name="item_en">ພາສາອັງກິດ</string>
    <string name="item_lao">ພາສາລາວ</string>
    <string name="change_language">ປ່ຽນພາສາ</string>
    <string name="setting_home">ຕັ້ງຄ່າ</string>
    <string name="reset_name_from_list_home">ລ້າງລາຍຊື່ທັງໝົດ</string>
    <string name="Emty_alert_message">ກະລຸນາປ້ອນຂໍ້ມຸນໃຫ້ຄົບກ່ອນ</string>
    <string name="ToManyRow_and_col_message">ຈໍານວນແຖວ ແລະ ຖັນ</string>
    <string name="TomenyRow_andcol_message">ຈໍານວນແຖວ ແລະ ຖັນຫຼາຍເກີນໄປ</string>
    <string name="Player_name">ຊື່ຜູ່ຫຼີ້ນ</string>
    <string name="Player_name_Message">ກະລຸນາປ້ອນຊື່ຜູ່ຫຼີ້ນໃຫ້ຫຼາຍກວ່າໜຶ່ງຄົນ!</string>
    <string name="This_name">ມີຊື່</string>
    <string name="already_exits">ຢູ່ແລ້ວ!</string>
    <string name="UserPlayerLuckyGameActivityPleaseEnterPlayerNameBefore">ກະລຸນາປ້ອນຊື່ຜູ່ຫຼີ້ນກ່ອນ!</string>
    <string name="Back_to_exit_app">ກົດປຸ່ມກັບອີກຄັ້ງເພື່ອອອກ</string>
    <string name="DeleteTitle">ລົບ</string>
    <string name="DeleteMessage">ທ່ານຕ້ອງການລົບລາຍການນີ້ ຫຼື ບໍ່ ?</string>
    <string name="StartGame">ເລີ່ມ</string>
    <string name="StartGame_Swap">ເລີ່ມເກມ</string>
    <string name="toolbar_user_swap_game">ເພີ່ມລາຍຊື່ເພື່ອຫຼີ້ນເກມ</string>
    <string name="LuckyGameActivity_Message_delete_user_start">ທ່ານຕ້ອງການລົບ ລາຍຊື່</string>
    <string name="LuckyGameActivity_Message_delete_user_end">ອອກຈາກການຫຼີ້ນເກມ ຫຼື ບໍ່ ?</string>
    <string name="_16_cards">16 ໃບ (4x4)</string>
    <string name="_20_4x5_cards">20 ໃບ (4x5)</string>
    <string name="_24_4x6_card">24 ໃບ (4x6)</string>
    <string name="_25_5x5_card">25 ໃບ (5x5)</string>
    <string name="_30_5x6_card">30 ໃບ (5x6)</string>
    <string name="_35_5x7_cards">35 ໃບ (5x7)</string>
    <string name="_40_5x8_card">40 ໃບ (5x8)</string>
    <string name="_45_5x9_card">45 ໃບ (5x9)</string>
    <string name="_50_5x10_cards">50 ໃບ (5x10)</string>
    <string name="delete_title">ລົບ</string>
    <string name="select_game_toolbarA">ເລືອກເກມ</string>
    <string name="column">ຖັນ</string>
    <string name="row">ແຖວ</string>
    <string name="notswap">ຍັງບໍ່ເຂົ້າໃນການຈັບຄູ່</string>
    <string name="swap_done">ເຂົ້າສູ່ການຈັບຄູ່ແລ້ວ</string>
    <string name="music">ສຽງເພງ</string>
    <string name="SelectGame">ກະລຸນາເລືອກເກມ</string>
    <string name="SwapGameActivity_got_present">ໄດ້ຮັບແລ້ວ.</string>
    <string name="games">ເກມ</string>
    <string name="please_wait">ກໍາລັງຊອກຫາຜູ່ເລີ່ມຕົ້ນ...</string>
    <string name="could_not_delete">ບໍ່ສາມາດລົບ </string>
    <string name="delete_user">ທ່ານຕ້ອງການລົບ </string>
    <string name="lucky_person">ຜູ່ນີ້ເປັນຜູ່ໂຊກດີແລ້ວ.</string>
    <string name="got_present_already">ຜູ່ນີ້ໄດ້ຮັບຂອງຂວັນແລ້ວ.</string>
    <string name="sound_neffect">ສຽງປະກອບ</string>
    <string name="would_delete">ທ່ານຕ້ອງການລົບ </string>
    <string name="from_list">ຈາກລາຍການ ຫຼື ບໍ່ ?</string>
    <string name="LuckyGameActivityCouldNotDeleteMoreToastMessagePupupDataSwapDraw">ບໍ່ສາມາລົບໄດ້</string>
    <string name="LuckyGameActivityCouldNotDelete">ບໍ່ສາມາດລົບ</string>
    <string name="LuckyGameActivityLuckyOne">ນີ້ແມ່ນຜູ່ໂຊກດີ</string>
    <string name="warng_start">ປ່ຽນພາສາ ຈະເຮັດໃຫ້ລາຍຊື່ທັງໝົດຖືກລົບ.</string>
    <string name="waring_end">ທ່ານຕ້ອງການ ຫຼື ບໍ່ ?</string>
    <string name="LuckyGameActivityCouldNotDeleteNow">ບໍ່ສາມາດລົບໄດ້ໃນຂະນະນີ້</string>
    <string name="SwapGameActivity_given">ເປັນຜູ້ໃຫ້.</string>
    <string name="reset_players">ລ້າງລາຍຊື່ທັງໝົດ</string>
    <string name="settings">ຕັ້ງຄ່າ</string>
    <string name="SwapGameActivityHasStarted">ໄດ້ເລີ່ມ ໄປແລ້ວ.</string>
    <string name="OK">ຕົກລົງ</string>
    <string name="Cancel">ຍົກເລີກ</string>
    <string name="coming_soon">ເກມໃໝ່ກໍາລັງຈະມາ!</string>
    <string name="SelectGameActivity_ToolbarText">ເກມ</string>
    <string name="swap_draw_game_title">ເກມ Swap Draw </string>
    <string name="UserPlayerLuckyGameToolBarLuckyGame">ເກມ Lucky Draw </string>
    <string name="joker_game_title">ເກມ Joker Draw </string>
    <string name="Rules">ກົດຂອງເກມ</string>
    <string name="Rule_body">ທ່ານອອກຈາກກຸ່່ມກະທັນຫັນ.</string>
    <string name="NetWorkConnectionError">ກະລຸນາກວດສອບ ສັນຍານອິນເຕີເນັດ ຂອງທ່ານ ແລ້ວລອງອີກຄັ້ງ.</string>
    <string name="CreateGroupActivityPleaseEnterId">ກະລຸນາປ້ອນໄອດີ</string>
    <string name="CreateGroupActivityPleaseEnterPassword">ກະລຸນາປ້ອນລະຫັດຜ່ານ</string>
    <string name="Player_Body_IdName_exits">ຊື່ນີ້ມີຢູ່ແລ້ວ ກະລຸນາປ້ອນຊື່ອື່ນ ແລ້ວລອງອີກຄັ້ງ.</string>
    <string name="Waring_header">ແຈ້ງເຕືອນ</string>
    <string name="CreateGroupActivity_group_name_password_not_correct">ຊື່ກຸ່ມ ແລະ ລະຫັດຜ່ານ ບໍ່ຖືກຕ້ອງ. ກະລຸນາກວດສອບ ແລ້ວລອງອີກຄັ້ງ.</string>
    <string name="FieldEmpty">ກະລຸນາປ້ອນຂໍ້ມຸນໃຫ້ຄົບກ່ອນ.</string>
    <string name="Warning_body_group_name_exit_toCreate">ກຸ່ມນີ້ມີຢູ່ແລ້ວ ກະລຸນາປ້ອນຊື່ກຸ່ມໃໝ່ ແລ້ວລອງອີກຄັ້ງ.</string>
    <string name="WaitingActivityMessageCreateGroupToAdmin">ທ່ານເປັນຜູ່ສ້າງກຸ່ມ.</string>
    <string name="WaitingActivityMessageToMemberJoiningGroup">ທ່ານກໍາລັງເຂົ້າຮ່ວມກຸ່ມ.</string>
    <string name="WaitingActivityMessageToOtherJoiningGroup"> ກໍາລັງເຂົ້າຮ່ວມກຸ່ມ.</string>
    <string name="WaitingActivityPopupSearchInvitation_header">ລາຍຊື່ຜູ່ພ້ອມຫຼີ້ນ.</string>
    <string name="OnlineJokerDrawBackPressedConfirmExit">ທ່ານຕ້ອງການກັບສູ່ໜ້າລໍຖ້າ ຫຼຶ ບໍ່ ?</string>
    <string name="Online_setting_header">ຕັ້ງຄ່າ</string>
    <string name="OnlineJokerDrawPleaseWaitingForYourTurn">ກະລຸນາລໍຖ້າຈົນເຖີງຜຽນຂອງທ່ານ...</string>
    <string name="OnlineJokerDrawActivityCouldNotSettingNow">ບໍ່ສາມາດຕັ້ງຄ່າໄດ້ໃນຂະໜະນີ້.</string>
    <string name="OnlineJokerDrawActivityMessageYourTurn">ຜຽນຂອງເຈົ້າ...</string>
    <string name="OnlineJokerDrawActivityTurn"> ຜຽນຂອງ </string>
    <string name="CreateGroupActivityPasswordNotCorrect">ລະຫັດຜ່ານຂອງທ່ານບໍ່ຖືກຕ້ອງ.</string>
    <string name="CreateGroupActivityGroupNameAndPasswordNotMatchAnyGroup">ຊື່ກຸ່ມ ແລະ ລະຫັດຜ່ານ ບໍ່ກົງກັບກຸ່ມໃດໆ. ກະລຸນາກວດສອບ ແລ້ວລອງອີກຄັ້ງ.</string>
    <string name="AppVersion">ເວີເຊີນ </string>
    <string name="GroupName">ຊື່ກຸ່ມ : </string>
    <string name="GroupPassword">ລະຫັດຜ່ານກຸ່ມ : </string>
    <string name="WaitingActivityAlreadyInvitedThisPerson">ທ່ານໄດ້ເຊີນ ຜູ່ຫຼີ້ນນີ້ແລ້ວ.</string>
    <string name="WaitingActivityPopupConfirmInviteSomePersonBelow">ທ່ານຕ້ອງການເຊີນ ຜູ່ຫຼີ້ນດ້ານລຸ່ມນີ້ ຫຼື ບໍ່ ?\nໄອດີ : </string>
    <string name="WaitingActivityPlayerSize"> ຜູ່ຫຼີ້ນທັງໝົດ : </string>
    <string name="WaitingActivityYouAreAdminWaitingMembers">ທ່ານແມ່ນຫົວໜ້າກຸ່ມ \nກະລຸນາລໍຖ້າ ສະມາຊິກ.</string>
    <string name="WaitingActivityBackPressedConfirmToExit">ທ່ານຕ້ອງການອອກຈາກໜ້າລໍຖ້າ ຫຼື ບໍ່ ?</string>
    <string name="WaitingActivityYouAreAdminYouCanClickToStart">ທ່ານແມ່ນຫົວໜ້າກຸ່ມ \nກະລຸນາກົດປຸ່ມເລີ່ມເພື່ອຫຼີ້ນເກມ.</string>
    <string name="WaitinActivityAdmin">ຫົວໜ້າກຸ່ມ : </string>
    <string name="WaitingActivityWaitingForAdminClickToStart">\nກະລຸນາລໍຖ້າ ຫົວໜ້າກຸ່ມກົດປຸ່ມເລີ່ມ.</string>
    <string name="ToolBarJokerDrawOnlineGame">ເກມ Joker Draw ອອນໄລ</string>
    <string name="ServiceNotificationTitle">Party Draw</string>
    <string name="ReceiveMessageActivityCouldNotJoinGroupNow">ທ່ານບໍ່ສາມາດເຂົ້າຮ່ວມກຸ່ມໄດ້ໃນຂະນະນີ້.</string>
    <string name="ReceivesMessageActivityNoGroupInTheList">ບໍ່ມີກູ່ມນີ້ຢູ່ໃນ ລາຍຊື່ກຸ່ມແລ້ວ.</string>
    <string name="HomeActivityPopupChangeVersionNewVersionUpdate">ທ່ານຕ້ອງການອັບເດດເປັນເວິເຊີນໃໝ່  </string>
    <string name="SelectGameActivityPopupSelectOfflineMode">ອອບໄລ</string>
    <string name="SelectGameActivityPopupSelectOnlineMode">ອອນໄລ</string>
    <string name="SelectGameActivityPopupSelectExitMode">ອອກ</string>
    <string name="CreateGroupActivity_From_InvitationList">ຈາກ </string>
    <string name="CreateGroupActivityMessageInvitationListPlayOnlineJokerDraw"> ໄດ້ເຊີນທ່ານເຂົ້າຫຼີ້ນເກມ.</string>
    <string name="CreateGroupActivityDialogConfirmJoiningGroupInviteJoiningGroup"> ເຊີນທ່ານເຂົ້າຮ່ວມກຸ່ມ </string>
    <string name="CreateGroupActivityWouldYouToJoin"> ຕ້ອງການເຂົ້າຮ່ວມ ຫຼື ບໍ່ ?</string>
    <string name="LuckyGameActivitySpinButtonLucky">ໂຊກດີ</string>
    <string name="OnlineJokerDrawToolbarDrawWithin">ເປີດໄພ້ພາຍໃນ</string>
    <string name="Drawing">ກໍາລັງຫຼີ້ນ</string>
    <string name="Waiting">ກໍາລັງລໍຖ້າ</string>
    <string name="ConfirmPasswordLayout_Please_enter_password">ກະລຸນາປ້ອນລະຫັດຜ່ານ</string>
    <string name="OnlineJokerDrawMessageCouldNotPlayThisGameAloneOutOfUsers">ບໍ່ສາມາດຫຼີ້ນເກມນີ້ຄົນດຽວ</string>
    <string name="InvitationLayoutAllOnlineId">ລາຍຊື່ຜູ່ທີ່ພ້ອມຫຼີ້ນທັງໝົດ</string>
    <string name="PlayerEditProfileLayout_ID">ໄອດີ</string>
    <string name="Name">ຊື່</string>
    <string name="CreateGroupActivity_Please_enter_group_name">ກະລຸນາປ້ອນຊື່ກຸ່ມ</string>
    <string name="Password">ລະຫັດຜ່ານ</string>
    <string name="CreateGroupActivity_Please_enter_group_password">ກະລຸນາປ້ອນລະຫັດຜ່ານ</string>
    <string name="ProgressBarDialogPleaseWait">ກະລຸນາລໍຖ້າ...</string>
    <string name="VersionChangeLayout_not_show_this_massage_again">ບໍ່ສະແດງ ໜ້ານີ້ອີກ</string>
    <string name="ServiceMessageBodyNotificationInviteToJokerDraw"> ໄດ້ເຊີນທ່ານເຂົ້າຫຼີ້ນເກມ Joker draw.</string>
    <string name="CreateGroupActivityButtonCreateGroup">ສ້າງກຸ່ມ</string>
    <string name="CreateGroupActivityButtonJoinGroup">ເຂົ້າຮ່ວມກຸ່ມ</string>
    <string name="OnlineJokerDrawExitFromGameByNotDrawingCardInTime">ທ່ານໄດ້ອອກໄປໜ້າລໍຖ້າ. ເນື່ອງຈາກທ່ານບໍ່ເປິດໄພ້ໃນເວລາທີ່ກໍານົດ.</string>
    <string name="SystemFixing">ຂໍອະໄພ\nປິດປັບປຸງຊົ່ວຄາວ.</string>
    <string name="EndOfService">ຂໍອະໄພ\nປິດໃຊ້ງານແລ້ວ.</string>
    <string name="DatabaseNeedToUpdate">ຂໍອະໄພ\nລະບົບມີການອັບເດດໃໝ່.</string>
    <string name="description_end_of_service">ໃນຂະນະນີ້ ລະບົບໄດ້ປິດໃຊ້ງານແລ້ວ.</string>
    <string name="description_underMaintenance">ໃນຂະນະນີ້ລະບົບມີການປັບປຸງ ຢູ່ທ່ານຈະບໍ່ສາມາດ ສະໝັກ ເຂົ້າຫຼີ້ນເກມໄດ້.</string>
    <string name="description_underMaintenance_2">ໃນຂະໜະນີ້ທ່ານບໍ່ສາມາດເຂົ້າຫຼີ້ນເກມໄດ້.</string>
    <string name="ConfirmLetsStartTheGame">ທ່ານຕ້ອງການເລີ່ມຫຼີ້ນເກມ ຫຼຶ ບໍ່ ?</string>
    <string name="OnlineJokerDrawDialogInfoThisPersionTurn">ຜຽນຜູ່ນີ້</string>
</resources>