<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/setting_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/header_setting"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/RadioButtonNine"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorList"
                android:text="@string/radio_option_3col_3row"
                android:textSize="20dp"
                android:buttonTint="#946E35"/>
            <RadioButton
                android:id="@+id/RadioButtonTwenty"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorSubList"
                android:text="@string/radio_option_3col_6col"
                android:textSize="20dp"
                android:buttonTint="#946E35"/>
            <RadioButton
                android:textStyle="bold"
                android:id="@+id/RadioButtonFifty"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorList"
                android:text="@string/radio_option_3col_9row"
                android:textSize="20dp"
                android:buttonTint="#946E35"/>
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="48dp"
            android:id="@+id/customizeColandRow"
            android:text="@string/customize"
            android:textSize="20dp"
            android:paddingEnd="15dp"
            android:background="@drawable/button_backgroud"
            android:drawableRight="@drawable/ic_keyboard_arrow_right"
            android:paddingRight="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:textStyle="bold"
            android:id="@+id/OkButtonJokerGameSetting"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:background="@drawable/button_backgroud"
            android:text="@string/OK" />

        <Button
            android:textStyle="bold"
            android:id="@+id/CancelButtonJokerGameSetting"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/button_backgroud"
            android:text="@string/Cancel" />
    </RelativeLayout>
</LinearLayout>