<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/setting_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/join_header"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/Name"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/group_name_join"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_design"
            android:hint="@string/CreateGroupActivity_Please_enter_group_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:nextFocusDown="@id/group_join_password"
            android:singleLine="true"
            android:padding="10dp"
            android:lines="1"
            android:maxLength="15"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp"
            android:focusable="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/Password"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            android:hint="@string/CreateGroupActivity_Please_enter_group_password"
            android:textColorHint="@color/colorWhite"
            android:background="@drawable/edit_text_design"
            android:id="@+id/group_join_password"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="8"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/join_popup"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/online_background_button"
            android:text="@string/OK"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/Cancel_Join_Popup"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/online_background_button"
            android:text="@string/Cancel"
            android:textStyle="bold"/>
    </RelativeLayout>
</LinearLayout>