<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/setting_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/header_profile"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Password"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="start|center_vertical"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_design">

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:padding="10dp"
            android:hint="@string/ConfirmPasswordLayout_Please_enter_password"
            android:maxLength="8"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/showHidePassword"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_password_visibility_off_24"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/button_backgroud"
            android:layout_alignParentLeft="true"
            android:text="@string/OK"
            android:id="@+id/Ok_Confirm_Id"
            android:textStyle="bold"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/button_backgroud"
            android:layout_alignParentRight="true"
            android:text="@string/Cancel"
            android:id="@+id/Cancel_Confirm_Id"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>